# video_web_app_v3

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  TASK.md  TEST_INSTRUCTIONS.md  database_schema.py  main.py  next.config.js  package-lock.json  package.json  planning.txt  pyproject.toml  requirements.txt  setup.sh
components/: AISummary.js  ContentTypeFilter.js  DownloadModal.js  Header.js  Logo.js  Pagination.js  RecommendedVideos.js  SearchBar.js  SimpleTranscriptViewer.js  TranscriptViewer.js  VideoCard.js  VideoChat.js  VideoQuiz.js  YouTubeEmbedPlayer.js  YouTubePlayer.js
context/: VideoContext.js
docs/: incremental_summary_generation.md  quiz_timestamp_fix.md  video_quiz_debugging_report.md  video_summarization.md
middleware/: youtubeApiMiddleware.js
pages/: index.js  results.js
public/: force-play.js  reload-approach.js
scripts/: demo_clean_chapters.md  demo_dynamic_quiz_system.md  demo_enhanced_chapters.md  demo_enhanced_summaries.md  demo_fixed_quiz_system.md  generate_chapter_preview.py  generate_quiz.py  incremental_summarize_transcript.py  quiz_system_fix_summary.md  sample_transcript.txt  summarize_transcript.py  test_azure_config.py  test_enhanced_summaries.py  test_incremental_generation.py  test_prettifier.py
styles/: AISummary.module.css  ContentTypeFilter.module.css  DownloadModal.module.css  Header.module.css  Home.module.css  Logo.module.css  Pagination.module.css  RecommendedVideos.module.css  Results.module.css  SearchBar.module.css  TranscriptViewer.module.css  VideoCard.module.css  (+6 more)
(+51 files in other folders)
